# MinecraftVulkan

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
docs/: UBO.md
docs/superpowers/plans/: 2026-03-25-pbr-ggx.md
docs/superpowers/specs/: 2026-03-25-pbr-ggx-design.md
include/: app.hpp  buffer.hpp  camera.hpp  cube_texture.hpp  descriptors.hpp  device.hpp  frame_info.hpp  game_object.hpp  ibl_precomputer.hpp  keyboard_movement_controller.hpp  material.hpp  model.hpp  pipeline.hpp  renderer.hpp  simple_render_system.hpp  swap_chain.hpp  texture.hpp  utils.hpp  window.hpp
include/systems/: point_light_system.hpp  simple_render_system.hpp
shaders/: brdf_lut.comp  brdf_lut.comp.spv  depth.vert  depth.vert.spv  equirect_to_cube.comp  equirect_to_cube.comp.spv  irradiance.comp  irradiance.comp.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  prefilter.comp  prefilter.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: app.cpp  billboard_component.hpp  buffer.cpp  camera.cpp  cube_texture.cpp  descriptors.cpp  device.cpp  game_object.cpp  ibl_precomputer.cpp  keyboard_movement_controller.cpp  main.cpp  material.cpp  material.hpp  model.cpp  pipeline.cpp  renderer.cpp  simple_render_system.cpp  swap_chain.cpp  texture.cpp  window.cpp
src/systems/: point_light_system.cpp  simple_render_system.cpp
